--- a/rooms.html
+++ b/rooms.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="css/rooms.css" rel="stylesheet" type="text/css">
+    <link href="css/room.css" rel="stylesheet" type="text/css">
     <title>Welcome to The Couples Resort</title>
 </head>
 
